name:                SciFlow
version:             0.6.0
synopsis:            Scientific workflow management system
description:         SciFlow is a DSL for building scientific workflows.
                     Workflows built with SciFlow can be run either on desktop
                     computers or in grid computing environments that
                     support DRMAA.
license:             MIT
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2015-2017 Kai Zhang
category:            Control
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md

Flag drmaa
  Description: Enable DRMAA integration
  Default:     False

library
  ghc-options: -Wall
  exposed-modules:
    Scientific.Workflow
    Scientific.Workflow.Main
    Scientific.Workflow.Main.Options
    Scientific.Workflow.Types
    Scientific.Workflow.Visualize
    Scientific.Workflow.Internal.Builder
    Scientific.Workflow.Internal.Builder.Types
    Scientific.Workflow.Internal.DB
    Scientific.Workflow.Internal.Utils

  other-modules:
    Paths_SciFlow

  if flag(drmaa)
    CPP-Options: -DDRMAA_ENABLED
    build-depends: drmaa >=0.2.0

  build-depends:
      base >=4.7 && <5.0
    , bytestring
    , aeson
    , containers
    , cereal
    , cereal-text
    , directory
    , data-default-class
    , exceptions
    , executable-path
    , fgl
    , graphviz
    , lens >=4.0
    , lifted-async
    , mtl
    , network
    , optparse-applicative >=0.13.0.0
    , rainbow
    , sqlite-simple
    , split
    , th-lift
    , th-lift-instances
    , time
    , temporary
    , text
    , template-haskell
    , transformers
    , yaml

  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository  head
  type: git
  location: https://github.com/kaizhang/SciFlow.git
