name:                SciFlow
version:             0.7.0
synopsis:            Scientific workflow management system
description:         SciFlow is a DSL for building scientific workflows.
                     Workflows built with SciFlow can be run either on desktop
                     computers or in grid computing environments that
                     support DRMAA.
license:             MIT
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2015-2018 Kai Zhang
category:            Control
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md

Flag drmaa
  Description: Enable DRMAA integration
  Default:     False

library
  ghc-options: -Wall
  exposed-modules:
    Scientific.Workflow
    Scientific.Workflow.Main
    Scientific.Workflow.TH
    Scientific.Workflow.Types
    Scientific.Workflow.Exec
    Scientific.Workflow.Coordinator
    Scientific.Workflow.Coordinator.Drmaa

  other-modules:
    Paths_SciFlow

  if flag(drmaa)
    CPP-Options: -DDRMAA_ENABLED
    build-depends: drmaa >=0.3.0

  build-depends:
      base >= 4.7 && < 5.0
    , bytestring
    , binary
    , unordered-containers
    , directory
    , exceptions
    , safe-exceptions
    , funflow == 1.4.*
    , lens >= 4.0
    , katip
    , mtl
    , monad-control
    , stm
    , store
    , shelly
    , network >= 2.8.0.0
    , optparse-applicative >= 0.14.0.0
    , path
    , process
    , rainbow
    , random
    , th-lift
    , th-lift-instances
    , temporary
    , text
    , template-haskell
    , transformers

  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository  head
  type: git
  location: https://github.com/kaizhang/SciFlow.git
