cabal-version: 1.12
name:           SciFlow-app
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/githubuser/SciFlow-viz#readme>
homepage:       https://github.com/githubuser/SciFlow-viz#readme
bug-reports:    https://github.com/githubuser/SciFlow-viz/issues
author:         Kai Zhang
maintainer:     kai@kzhang.org
copyright:      2019 Kai Zhang
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/SciFlow-viz

library
  exposed-modules:
      Control.Workflow.Main
      Control.Workflow.Main.Command
      Control.Workflow.Main.Command.Run
      Control.Workflow.Main.Command.View
      Control.Workflow.Main.Types
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
    , aeson
    , aeson-qq
    , binary
    , bytestring
    , raw-strings-qq
    , SciFlow
    , optparse-applicative
    , unordered-containers
    , text
    , split
    , yaml
    , network-transport-tcp
  default-language: Haskell2010