cabal-version: 1.12
name:           SciFlow-app
version:        0.1.0
description:    Building apps using SciFlow workflow management system.
author:         Kai Zhang
maintainer:     kai@kzhang.org
copyright:      (c) 2019 Kai Zhang
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/kaizhang/SciFlow.git

library
  exposed-modules:
      Control.Workflow.Main
      Control.Workflow.Main.Command
      Control.Workflow.Main.Command.Run
      Control.Workflow.Main.Command.View
      Control.Workflow.Main.Command.Remote
      Control.Workflow.Main.Command.Delete
      Control.Workflow.Main.Command.Show
      Control.Workflow.Main.Types
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , aeson
    , aeson-qq
    , binary
    , bytestring
    , hostname
    , raw-strings-qq
    , optparse-applicative
    , unordered-containers
    , text
    , yaml
    , network-transport-tcp
    , pretty-show
    , port-utils
    , SciFlow >=0.7.0
  default-language: Haskell2010