name:                SciFlow-drmaa
version:             0.1.0
synopsis:            Scientific workflow management system
description:         DRMAA backend for SciFlow
license:             MIT
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2019 Kai Zhang
category:            Control
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:

library
  ghc-options: -Wall
  exposed-modules:
    Control.Workflow.Coordinator.Drmaa

  build-depends:
      base >= 4.7 && < 5.0
    , bytestring
    , binary
    , drmaa >=0.3.0
    , unordered-containers
    , directory
    , distributed-process == 0.7.*
    , distributed-process-monad-control
    , funflow
    , network-transport == 0.5.*
    , network-transport-tcp
    , hostname
    , mtl
    , stm
    , path
    , temporary
    , text
    , transformers
    , SciFlow

  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository  head
  type: git
  location: https://github.com/kaizhang/SciFlow.git
