name:                SciFlow
version:             0.7.1
synopsis:            Scientific workflow management system
description:         SciFlow is a DSL for building type-safe computational workflows.
                     SciFlow supports distributed computing through Cloud Haskell.
license:             MIT
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2015-2019 Kai Zhang
category:            Control
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md

library
  ghc-options: -Wall
  exposed-modules:
    Control.Workflow
    Control.Workflow.Language
    Control.Workflow.Language.TH
    Control.Workflow.Interpreter.Exec
    Control.Workflow.Interpreter.FunctionTable
    Control.Workflow.Interpreter.Graph
    Control.Workflow.Coordinator
    Control.Workflow.Coordinator.Local
    Control.Workflow.DataStore
    Control.Workflow.Types
    Control.Workflow.Utils

  other-modules:
    Control.Arrow.Free
    Control.Arrow.Async
    Control.Workflow.Language.TH.Internal

  build-depends:
      base >= 4.7 && < 5.0
    , bytestring
    , binary
    , constraints
    , cryptohash-sha256
    , distributed-process == 0.7.*
    , exceptions
    , hashable
    , lifted-async
    , mtl
    , memory
    , monad-control
    , network-transport == 0.5.*
    , rainbow
    , stm
    , sqlite-simple
    , text
    , template-haskell
    , time
    , th-lift-instances
    , unordered-containers

  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository  head
  type: git
  location: https://github.com/kaizhang/SciFlow.git
