name:                SciFlow
version:             0.7.2
synopsis:            Scientific workflow management system
description:         SciFlow is a DSL for building type-safe computational workflows.
                     SciFlow supports distributed computing through Cloud Haskell.
license:             MIT
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2015-2020 Kai Zhang
category:            Control
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md

library
  ghc-options: -Wall
  exposed-modules:
    Control.Workflow
    Control.Workflow.Language
    Control.Workflow.Language.TH
    Control.Workflow.Language.TH.Internal
    Control.Workflow.Interpreter.Exec
    Control.Workflow.Interpreter.FunctionTable
    Control.Workflow.Interpreter.Graph
    Control.Workflow.Coordinator
    Control.Workflow.Coordinator.Local
    Control.Workflow.DataStore
    Control.Workflow.Types
    Control.Workflow.Utils
    Control.Arrow.Free
    Control.Arrow.Async

  build-depends:
      base >= 4.7 && < 5.0
    , bytestring
    , binary
    , constraints
    , cryptohash-sha256
    , distributed-process == 0.7.*
    , fgl
    , exceptions
    , hashable
    , lifted-async
    , mtl
    , memory
    , monad-control
    , network-transport == 0.5.*
    , rainbow >= 0.34.2.0
    , stm
    , sqlite-simple
    , text
    , template-haskell >= 2.16.0.0
    , time
    , th-lift-instances
    , unordered-containers

  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository  head
  type: git
  location: https://github.com/kaizhang/SciFlow.git
